# maxfit

./: README.md  pyproject.toml
examples/: example_max_convex_set.py  example_max_ellipsoid.py  example_max_polyhedron.py  example_nonlinear_fun.py  example_scalar_fun.py
src/: maxfit.py
